--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.12.0",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
+    "openai": "^5.12.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
@@ -33,4 +37,3 @@
     "typescript": "5.8.3"
   }
 }
-
