--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "cross-env NODE_OPTIONS=--max-old-space-size=4096 next dev",
+    "build": "cross-env NODE_OPTIONS=--max-old-space-size=4096 next build",
     "start": "next start",
     "lint": "next lint",
     "db:seed": "node prisma/seed.js",
@@ -17,6 +17,8 @@
     "@prisma/client": "^6.13.0",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
+    "chrome-launcher": "^1.2.0",
+    "chrome-remote-interface": "^0.33.3",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
@@ -35,6 +37,7 @@
     "eslint-config-next": "15.3.5",
     "prisma": "^6.12.0",
     "rimraf": "^6.0.1",
+    "cross-env": "^7.0.3",
     "tailwindcss": "^4",
     "typescript": "5.8.3"
   }
